--- a/frontend/src/static/Booking.css
+++ b/frontend/src/static/Booking.css
@@ -44,5 +44,19 @@ body {
   border-radius: 7px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 60px;
+  margin-bottom: 70px;
+}
+
+.container {
+  width: 100%;
+  min-height: 850px;
+  max-width: 1140px;
+  padding: 15px 15px 15px 15px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+  line-height: 1.5;
+  text-align: center;
+  box-sizing: border-box;
 }
