--- a/frontend/src/static/Navbar.css
+++ b/frontend/src/static/Navbar.css
@@ -32,55 +32,32 @@
   
   
   
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width:700px) {
 
     nav {
       position: relative;
     }
+
   
     .hamburger {
       position: absolute;
-      cursor: pointer;
+      cursor: pointer ;
       right:5%;
-      top: 8%;
+      padding-top: 10%;
       transform: translate(-5%, -50%);
       z-index: 2;
-    
+      
     }
-  
+
     .nav-links {
       position: fixed;
       background: #5b78c7;
       height: 100vh;
       width: 100%;
       flex-direction: column;
-      clip-path: circle(500px at 80% 0%);
-      -webkit-clip-path: circle(500px at 90% -10%);
       transition: all 1s ease-out;
+    
       
     }
-    .nav-links.open {
-      clip-path: circle(1000px at 90% -10%);
-      -webkit-clip-path: circle(1000px at 90% -10%);
-      pointer-events: all;
-    }
-    
-    .nav-links li {
-      opacity: 0;
-    }
-    .nav-links li a {
-      font-size: 25px;
-    }
-    .nav-links li:nth-child(1) {
-      transition: all 0.5s ease 0.2s;
-    }
-    .nav-links li:nth-child(2) {
-      transition: all 0.5s ease 0.4s;
-    }
-    .nav-links li:nth-child(3) {
-      transition: all 0.5s ease 0.6s;
-    }
-    li.fade {
-      opacity: 1;
-    }
+   
   }
