--- a/frontend/src/static/Booking.css
+++ b/frontend/src/static/Booking.css
@@ -44,18 +44,18 @@ body {
   border-radius: 7px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 70px;
+  margin-bottom: 40px;
+  min-width: 22vw;
 }
 
 .container {
   width: 100%;
-  min-height: 850px;
-  max-width: 1140px;
-  padding: 15px 15px 15px 15px;
+  max-width: 90vw;
+  padding: 20px 20px 20px 20px;
   margin-top: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 100px;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  margin-bottom: 50px;
   line-height: 1.5;
   text-align: center;
   box-sizing: border-box;
