--- a/frontend/src/static/MainLayout.css
+++ b/frontend/src/static/MainLayout.css
@@ -1,3 +1,11 @@
+* {
+  margin: 0;
+  /* padding: 0; */
+  /* box-sizing: border-box; */
+}
+body {
+  /* font-family: sans-serif; */
+}
 .logo {
   width: 120px;
   height: 31px;
