--- a/frontend/src/static/Navbar.css
+++ b/frontend/src/static/Navbar.css
@@ -1,13 +1,12 @@
- 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  body {
-    font-family: sans-serif;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: sans-serif;
+}
+/*   
   nav {
     height:8vh;
     width: auto;
@@ -60,4 +59,4 @@
       
     }
    
-  }
+  } */
